--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] [GH#38] Added http-vuln-cve2014-8877 to check for and optionally
+  exploit a vulnerability in CM Download Manager plugin for Wordpress.
+  [Mariusz Ziulek]
+
 o [Ncat] [GH#151] [GH#142] New option --no-shutdown prevents Ncat from shutting
   down when it reads EOF on stdin. This is the same as traditional netcat's
   "-d" option. [Adam Saponara]
