--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] [GH#232] Added ssl-dh-params to check for problems with weak, non-safe,
+  and export-grade Diffie-Hellman parameters in TLS handshakes. This includes
+  the LOGJAM vulnerability (CVE-2015-4000). [Jacob Gajek]
+
 o [NSE] Added nje-node-brute to brute-force z/OS JES Network Job Entry node
   names. [Soldier of Fortran]
 
