--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [Nsock] Avoid a crash on Windows and other systems which use nbase's
+  vasprintf implementation. In the case of unknown OpenSSL errors,
+  ERR_reason_error_string would return NULL, which could not be printed with
+  the "%s" format string. Fixed by using ERR_error_string instead, which will
+  not return NULL, and by causing NULL pointers to be printed as "(null)", as
+  glibc and MSVC both do. Reported by Dan Baxter. [Gisle Vanem, Daniel Miller]
+
 o Print service info in grepable output for ports which are not listed in
   nmap-services when a service tunnel (SSL) is detected. Previously, the
   service info ("ssl|unknown") was not printed unless the service inside the
