--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added imap-ntlm-info for extracting hostname and sometimes OS version
+  from NTLM-auth-enabled IMAP services. [Justin Cacak]
+
 o [NSE] Added http-vuln-cve2013-6786 for detecting a XSS and URL redirection
   vulnerability in Allegro RomPager web server. Also added a fingerprint for
   detecting CVE-2014-4019 to http-fingerprints.lua. [Vlatko Kosturjak]
