--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added nntp-ntlm-info for extracting hostname and sometimes OS version
+  from NTLM-auth-enabled NNTP services. [Justin Cacak]
+
 o [NSE] Added pop3-ntlm-info for extracting hostname and sometimes OS version
   from NTLM-auth-enabled POP3 services. [Justin Cacak]
 
