--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
-o [NSE] Added STARTTLS support for NNTP [Daniel Miller]
+o [NSE] Added STARTTLS support for VNC, NNTP, and LMTP [Daniel Miller]
 
 o Added new service probes and match lines for OpenVPN on UDP and TCP.
 
