--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Improved version detection and descriptions for Microsoft and Samba
+  SMB services. Also addresses certain issues with OS identification. 
+  [Tom Sellers]
+
 Nmap 7.12 [2016-03-29]
 
 o [Zenmap] Avoid file corruption in zenmap.conf, reported as files containing
