Tridium Fox script, probes, sslports.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
-o New service probe and match lines for PCWorx and ProConOS, based on work by
-  Stephen Hilt of Digital Bond.
+o [NSE] New script: fox-info retrieves detailed version and configuration info
+  from Tridium Niagara Fox services. [Stephen Hilt]
+
+o New service probe and match lines for PCWorx, ProConOS, and Tridium Fox,
+  based on work by Stephen Hilt of Digital Bond.
 
 o [NSE] New script: pcworx-info retrieves PLC model, firmware version, and date
   from Phoenix Contact PLCs. [Stephen Hilt]
