Avoid eating 'T' 'U' 'S' 'P' not followed by ':' in getpts.
On reading 'T', 'U', 'S', or 'P', getpts_aux would unconditionally
consume the character before checking to see whether it was followed by
a ':'. You could insert 'T', 'U', 'S', or 'P' in several places and it
would just be ignored, which is different treatment than other letters
got.

Behavior before:
	nmap -p 9
	# scans port 9

	nmap -p discard
	# scans port 9

	nmap -p Tdiscard
	# scans port 9

	nmap -p T:Tdiscard
	# scans port 9

	nmap -p Tdi*ard
	# scans port 9

	nmap -p Xdiscard
	# Error #485: Your port specifications are illegal.  Example of proper form: "-100,200-1024,T:3000-4000,U:60000-"

Behavior after:
	nmap -p 9
	# scans port 9

	nmap -p discard
	# scans port 9

	nmap -p Tdiscard
	# Error #485: Your port specifications are illegal.  Example of proper form: "-100,200-1024,T:3000-4000,U:60000-"

	nmap -p T:Tdiscard
	# Error #485: Your port specifications are illegal.  Example of proper form: "-100,200-1024,T:3000-4000,U:60000-"

	nmap -p Tdi*ard
	# Error #485: Your port specifications are illegal.  Example of proper form: "-100,200-1024,T:3000-4000,U:60000-"

	nmap -p Xdiscard
	# Error #485: Your port specifications are illegal.  Example of proper form: "-100,200-1024,T:3000-4000,U:60000-"

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Fixed a bug in port specification parsing that could cause extraneous
+  'T', 'U', 'S', and 'P' characters to be ignored when they should have
+  caused an error. [David Fifield]
+
 o [GH#543] Restored compatibility with LibreSSL, which was lost in adding
   library version checks for OpenSSL 1.1. [Wonko7]
 
